...
    <!-- login -->
    <string name="login_dialog_message">Please wait</string>
    <string name="downloading_forms">Downloading forms</string>
    <string name="downloading_values">Downloading values</string>

    <!-- data entry -->
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="none_button">No value</string>

    <string name="enter_number">Enter number</string>
    <string name="enter_integer">Enter integer</string>
    <string name="enter_integer_positive">Enter positive integer</string>
...
    <string name="program">Program</string>
    <string name="period">Period</string>
    <string name="swipe_to_update">Swipe to update</string>
    <string name="no_forms_found">No forms found assigned to current user</string>

    <!-- Validation strings -->
    <string name="validation_alert_dialog_title">Validation</string>
    <string name="validation_alert_dialog_confirmation">Confirm</string>
    <string name="validation_alert_dialog_rejection">Delete Value</string>

    <!-- Additional Diseases -->
    <string name="additional_diseases_title">Additional Diseases</string>
    <string name="add_disease_title">Add Disease</string>
    <string name="submit_button_title">Submit</string>
    <string name="delete_disease_dialog_title">Delete disease?</string>
...
